--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs  = -Xmx1G
 
-minecraft_version=22w06a
-yarn_mappings=22w06a+build.8
-loader_version=0.13.1
+minecraft_version   = 20w29a
+yarn_mappings       = 20w29a+build.9
+loader_version      = 0.9.0+build.204
 
 #Mod properties
 mod_version         = 1.1.0
