--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs  = -Xmx1G
 
-minecraft_version   = 20w29a
-yarn_mappings       = 20w29a+build.9
-loader_version      = 0.9.0+build.204
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
+loader_version=0.14.6
 
 #Mod properties
 mod_version         = 1.0.0
