--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,11 +2,10 @@ jdk:
   - openjdk17
 
 before_install:
-  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
-    - source ./install-jdk.sh --feature 17 --license GPL
+  - sdk install java 17.0.3-ms
+  - sdk use java 17.0.3-ms
 
 install:
   - echo "Install"
-  - if ! bash ensure-java-16 use; then source ~/.sdkman/bin/sdkman-init.sh; fi
   - java -version
   - gradle publishToMavenLocal
